fix contrast

--- a/src/ui/tile/tile.module.scss
+++ b/src/ui/tile/tile.module.scss
@@ -41,8 +41,7 @@
   }
 
   .subtitle {
-    color: var(--color-grey-50);
-    font-weight: 500;
+    font-weight: 400;
     font-size: 0.9em;
     line-height: 1.6;
   }
